commit tree 4ca35cc3c8434c7c1e9d75b8572bb96426f3eb3c

--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBuP0F0v7JEcfZKNLynnmZvuul976yo9ntlNXl0oXsZkpFl7yvroH308oql9qJbDe3zwM&usqp=CAU"/>
+    <img 
+      src="https://f4.bcbits.com/img/a3002864667_2.jpg"
+      alt="Cover for the album Genesis"
+    />
+    <img 
+      src="https://f4.bcbits.com/img/a2317917187_2.jpg"
+      alt="Cover for the album Grief"
+      title="Grief: by Kaltrunner"
+    />
   </body>
 </html>
